Fix issue with image height

--- a/style.css
+++ b/style.css
@@ -131,6 +131,7 @@ header .nav{
     width: 40%;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
 }
 
 .posts h3{
@@ -159,7 +160,6 @@ header .nav{
 
 .post2 img{
     width: 35%;
-    height: fit-content;
 }
 
 .rm{
